# mcview

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG  CHANGELOG.ja-JP  CMakeLists.txt  JUCE.patch  README.md  fmt  localize.sh  mcview.jucer  openjucer  openjucer.bat
Builds/: .gitignore
Builds/MacOSX/: Info-App.plist
Builds/MacOSX/mcview.xcodeproj/: project.pbxproj
Builds/MacOSX/mcview.xcodeproj/xcshareddata/xcschemes/: mcview - App.xcscheme
Builds/Package/: .gitignore  Package.StoreAssociation.xml  Package.appxmanifest  Package.appxmanifest.in  Package.wapproj
Builds/VisualStudio2019/: .gitignore  mcview.sln  mcview_App.vcxproj  mcview_App.vcxproj.filters  resources.rc
JuceLibraryCode/: AppConfig.h
Resource/: japanese.lang
Resource/shader/: color.frag  tile.vert
Source/: AboutComponent.cpp  AboutComponent.h  AboutComponent.hpp  Application.cpp  Application.mm  BedrockTexturePackJob.hpp  BedrockTexturePackThreadPool.hpp  BedrockWorldScanThread.hpp  Browser.cpp  Browser.h  BrowserComponent.cpp  BrowserComponent.h  BrowserComponent.hpp  ColorMat.hpp  ConcertinaPanel.hpp  CustomDirectoryBrowser.hpp  Dimension.h  Dimension.hpp  Directory.hpp  DirectoryBrowser.cpp  DirectoryBrowser.h  DirectoryBrowserComponent.cpp  DirectoryBrowserComponent.h  DirectoryBrowserComponent.hpp  DirectoryBrowserModel.hpp  DirectoryCleanupThread.hpp  Edition.hpp  File.h  File.hpp  FirewallEnv.hpp  GLAttributes.hpp  GLBuffer.hpp  GLUniforms.hpp  GLVertex.hpp  GameDirectory.hpp  GameDirectoryBrowser.hpp  GameDirectoryBrowserModel.hpp  GraphicsHelper.cpp  GraphicsHelper.h  GraphicsHelper.hpp  (+72 more)
